--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Custom Element Demo : Esri Dev Summit 2017</title>
   <link rel="stylesheet" href="https://js.arcgis.com/4.10/esri/css/main.css">
   <script src="https://js.arcgis.com/4.10/"></script>
+    <script src="https://unpkg.com/@webcomponents/custom-elements"></script>
+
   <style>
     html, body, arcgis-web-map {
       margin: 0;
