--- a/streetplan.html
+++ b/streetplan.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Custom Element Demo : Esri Dev Summit 2017</title>
   <link rel="stylesheet" href="styles.css">
+
   <link rel="stylesheet" href="https://js.arcgis.com/4.10/esri/css/main.css">
   <script src="https://js.arcgis.com/4.10/"></script>
   <style>
@@ -19,6 +20,6 @@
 </head>
   <body>
 
-    <arcgis-web-map webmapid="7369e35daeb3415eb1bcf9a0df8e771f" address="222 W Hargett St, Raleigh" search="true" querylayer="Raleigh Parks" querywhere="NAME = 'Laurel Hills'" legend="true" layerlist="true" basemapselect="true" basemapgroup="5e4b1873eeed4e448aca4bf930df0cd0"></arcgis-webmap>
+    <arcgis-web-map webmapid="809e6739160c4a4784660747bd8d6f97"  legend="true" search="true"></arcgis-webmap>
   </body>
 </html>
