--- a/webmap-no-id.html
+++ b/webmap-no-id.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Custom Element Demo : Esri Dev Summit 2017</title>
-  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://js.arcgis.com/4.10/esri/css/main.css">
   <script src="https://js.arcgis.com/4.10/"></script>
   <style>
@@ -18,7 +17,6 @@
   <script src="web-map.js"></script>
 </head>
   <body>
-
-    <arcgis-web-map webmapid="7369e35daeb3415eb1bcf9a0df8e771f" address="222 W Hargett St, Raleigh" search="true" querylayer="Raleigh Parks" querywhere="NAME = 'Laurel Hills'" legend="true" layerlist="true" basemapselect="true" basemapgroup="5e4b1873eeed4e448aca4bf930df0cd0"></arcgis-webmap>
-  </body>
+    <arcgis-web-map  basemap="streets-night-vector" center="-78.6,35.6" zoom="15"></arcgis-web-map>
+</body>
 </html>
