--- a/webmap-no-id.html
+++ b/webmap-no-id.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Custom Element Demo : Esri Dev Summit 2017</title>
+  <link rel="stylesheet" href="styles.css">
+  
   <link rel="stylesheet" href="https://js.arcgis.com/4.10/esri/css/main.css">
   <script src="https://js.arcgis.com/4.10/"></script>
   <style>
