--- a/streetplan.html
+++ b/streetplan.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Custom Element Demo : Esri Dev Summit 2017</title>
+  <title>Streetplan</title>
   <link rel="stylesheet" href="styles.css">
 
   <link rel="stylesheet" href="https://js.arcgis.com/4.10/esri/css/main.css">
