--- a/webmap-address.html
+++ b/webmap-address.html
@@ -19,6 +19,6 @@
   <script src="web-map.js"></script>
 </head>
   <body>
-    <arcgis-web-map  basemap="streets-navigation-vector" address="222 W Hargett St, Raleigh" search="true"></arcgis-web-map>
+    <arcgis-web-map  basemap="streets-navigation-vector" address="222 W Hargett St, Raleigh" search="true" navigate="false"></arcgis-web-map>
 </body>
 </html>
