--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     html, body, arcgis-web-map {
       margin: 0;
-      height: 100%;
+      height: 50%;
       width: 100%;
       background: #222326;
     }
@@ -20,5 +20,8 @@
   <body>
 
     <arcgis-web-map webmapid="7369e35daeb3415eb1bcf9a0df8e771f" search address="222 W Hargett St, Raleigh"  querylayer="Raleigh Parks" querywhere="NAME = 'Laurel Hills'" legend="true" layerlist="true" basemapselect="true" basemapgroup="5e4b1873eeed4e448aca4bf930df0cd0"></arcgis-webmap>
+ 
+    <arcgis-web-map webmapid="7369e35daeb3415eb1bcf9a0df8e771f" search address="222 W Hargett St, Raleigh"  querylayer="Raleigh Parks" querywhere="NAME = 'Laurel Hills'" legend="true" layerlist="true" basemapselect="true" basemapgroup="5e4b1873eeed4e448aca4bf930df0cd0"></arcgis-webmap>
+
   </body>
 </html>
