--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     html, body, arcgis-web-map {
       margin: 0;
-      height: 50%;
+      height: 500px;
       width: 100%;
       background: #222326;
     }
