--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
   <body>
 
-    <arcgis-web-map webmapid="7369e35daeb3415eb1bcf9a0df8e771f" search address="222 W Hargett St, Raleigh"  querylayer="Raleigh Parks" querywhere="NAME = 'Laurel Hills'" legend="true" layerlist="true" basemapselect="true" basemapgroup="5e4b1873eeed4e448aca4bf930df0cd0"></arcgis-webmap>
+    <arcgis-web-map webmapid="7369e35daeb3415eb1bcf9a0df8e771f" zoom="15" search address="222 W Hargett St, Raleigh"  querylayer="Raleigh Parks" querywhere="NAME = 'Laurel Hills'" legend="true" layerlist="true" basemapselect="true" basemapgroup="5e4b1873eeed4e448aca4bf930df0cd0"></arcgis-webmap>
  
     <arcgis-web-map webmapid="7369e35daeb3415eb1bcf9a0df8e771f" search address="222 W Hargett St, Raleigh"  querylayer="Raleigh Parks" querywhere="NAME = 'Laurel Hills'" legend="true" layerlist="true" basemapselect="true" basemapgroup="5e4b1873eeed4e448aca4bf930df0cd0"></arcgis-webmap>
 
