hide search if not specified

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width">
   <title>Zoom to Park</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://js.arcgis.com/4.10/esri/css/main.css">
-  <script src="https://js.arcgis.com/4.10/"></script>
+  <link rel="stylesheet" href="https://js.arcgis.com/4.11/esri/css/main.css">
+  <script src="https://js.arcgis.com/4.11/"></script>
   <style>
     html, body, arcgis-web-map {
       margin: 0;
@@ -20,11 +20,11 @@
   <body>
     <div>
         <!-- <arcgis-web-map webmapid="7369e35daeb3415eb1bcf9a0df8e771f" zoom="15" search querylayer="Raleigh Parks" querywhere="NAME = 'Laurel Hills'" legend="true" layerlist="true" basemapselect="true" basemapgroup="5e4b1873eeed4e448aca4bf930df0cd0"></arcgis-webmap> -->
-          <arcgis-web-map webmapid="7369e35daeb3415eb1bcf9a0df8e771f" zoom="20"   search address="222 W Hargett St, Raleigh" legend="true" layerlist="true" basemapselect="true" basemapgroup="5e4b1873eeed4e448aca4bf930df0cd0"></arcgis-webmap>
+          <arcgis-web-map webmapid="7369e35daeb3415eb1bcf9a0df8e771f"  search address="222 W Hargett St, Raleigh" legend="true" layerlist="true" basemapselect="true" basemapgroup="5e4b1873eeed4e448aca4bf930df0cd0"></arcgis-webmap>
 
     </div>
     <div>
-        <arcgis-web-map webmapid="7369e35daeb3415eb1bcf9a0df8e771f" zoom="10"   search address="222 W Hargett St, Raleigh" legend="true" layerlist="true" basemapselect="true" basemapgroup="5e4b1873eeed4e448aca4bf930df0cd0"></arcgis-webmap>
+        <arcgis-web-map webmapid="7369e35daeb3415eb1bcf9a0df8e771f" popup="false" zoom="15" navigate="false"   address="222 W Hargett St, Raleigh" legend="true" layerlist="true" basemapselect="true" basemapgroup="5e4b1873eeed4e448aca4bf930df0cd0"></arcgis-webmap>
 
     </div>
  
